--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ header {
 }
 
 .logo {
-    font-size: 32px;
+    font-size: 24px;
     font-weight: bold;
 }
 
@@ -42,3 +42,53 @@ header a {
     color: #e5e7eb;
 }
 
+main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.hero {
+    height: 250px;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+}
+
+.hero-left {
+    min-width: 300px;
+    display: flex;
+    flex-flow: column;
+    gap: 10px;
+    font-size: 24px;
+    color: #f9faf8;
+    align-items: flex-start;
+}
+
+.hero-left p {
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.hero-left h1 {
+    max-width: 300px;
+}
+
+.hero-left button {
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+}
+
+.hero-right {
+    width: auto;
+    height: 200px;
+    display: flex;
+}
