--- a/styles.css
+++ b/styles.css
@@ -65,3 +65,33 @@ img {
     width: auto;
 
 }
+
+.information {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+.information h2 {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+}
+
+.card-container {
+    display: flex;
+    justify-content: center;
+}
+
+.card {
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  margin: 10px;
+  font-weight: 500;
+  border: 1px solid #eee;
+  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  border-radius: 4px;
+}
