--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ img {
 }
 
 .information {
-    margin-top: 30px;
+    margin: 50px 0px 100px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -78,20 +78,32 @@ img {
     font-size: 36px;
     color: #1f2937;
     font-weight: 900;
+    margin-bottom: 20px;
 }
 
 .card-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    gap: 30px;
 }
 
 .card {
-  width: 150px;
-  height: 150px;
-  overflow: hidden;
-  margin: 10px;
-  font-weight: 500;
-  border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-  border-radius: 4px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #868686;
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    height: 150px;
+    margin: 10px;
+    font-weight: 500;
+    border-radius: 4px;
+    justify-content: center;
+    text-align: center;
+    gap: 10px;
+}
+
+.card img {
+    border: #3882f6 5px solid;
+    border-radius: 10px;
 }
