--- a/styles.css
+++ b/styles.css
@@ -107,3 +107,23 @@ img {
     border: #3882f6 5px solid;
     border-radius: 10px;
 }
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #E5E7EB;
+    height: 200px;
+}
+
+.quote p {
+    font-size: 36px;
+    font-weight: 300;
+    color: #1f2937;
+}
+
+.quote h4 {
+    margin: 0px 100px 0px 0px;
+    align-self: flex-end;   
+}
