--- a/styles.css
+++ b/styles.css
@@ -147,3 +147,11 @@ img {
     color: #f9faf8;
 }
 
+footer {
+    background-color: #1f2937;
+    color: #f9faf8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+}
